--- a/src/posts/гражданская-декларация-оян-казахстан.md
+++ b/src/posts/гражданская-декларация-оян-казахстан.md
@@ -3,8 +3,8 @@ layout: layouts/post.njk
 title: 'Гражданская декларация "Оян, Казахстан"'
 date: 2019-08-11T09:04:18.501Z
 tags:
-  - Декларация
-  - Рус
+  - декларация
+  - рус
 ---
 ![OYAN QAZAQSTAN](/images/без-названия-1-.png)
 
